--- a/researchcn.html
+++ b/researchcn.html
@@ -103,7 +103,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（68）</span></h1></td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（68）</span></h1> 总影响因子=150.0，其中一作/通讯总影响因子=125.8</td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -290,25 +290,26 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-				</td></tr>
 				-->
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Advanced Biosignal-RGB Fusion with Adaptive Neurofuzzy Classification for High-Precision Action Recognition.</i> Abro1, I. A., Alhasson, H. F., Alharbi, S. S., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, and Liu, H.* (2025). IEEE Access.
-					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 				</td></tr>
-				-->
 				<tr><td>
-					<i>Thermo-environ-economic analysis of a novel solar-assisted heat pump system; comparison with conventional single stage and cascaded air source heat pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy, 135647. Elsevier<br>
+					<i>Thermo-environ-economic analysis of a novel solar-assisted heat pump system; comparison with conventional single stage and cascaded air source heat pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy, 322:135647. Elsevier<br>
 					<a href="https://scholar.google.com/scholar?q=Thermo-environ-economic+analysis+of+a+novel+solar-assisted+heat+pump+system%3B+comparison+with+conventional+single+stage+and+cascaded+air+source+heat+pumps" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Thermo-environ-economic-analysis-of-a-novel-heat-Manesh-Liu/b5444342a944baf5bc5b34741fc480f97b40cf61" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/389881579_Thermo-environ-economic_analysis_of_a_novel_solar-assisted_heat_pump_system_comparison_with_conventional_single_stage_and_cascaded_air_source_heat_pumps" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0360544225012897" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.energy.2025.135647" target="_blank" rel="noopener noreferrer">10.1016/j.energy.2025.135647</a>
+				</td></tr>
+				<tr><td>
+					<i>Advanced Biosignal-RGB Fusion with Adaptive Neurofuzzy Classification for High-Precision Action Recognition.</i> Abro, I. A., Alhasson, H. F., Alharbi, S. S., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;
+					-->
+					<a href="https://www.researchgate.net/publication/390087724_Advanced_Biosignal-RGB_Fusion_with_Adaptive_Neurofuzzy_Classification_for_High-Precision_Action_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10935610" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3553196" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3553196</a>
 				</td></tr>
 				<tr><td>
 					<i>Enhancing Smart Building Performance with Waste Heat Recovery: Supply-Side Management, Demand Reduction, and Peak Shaving via Advanced Control Systems.</i> Liu, H., Du, Z., Xue, T., and Jiang, T.* (2025). Energy and Buildings, 327:115070. Elsevier.<br>
@@ -327,7 +328,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s25010200" target="_blank" rel="noopener noreferrer">10.3390/s25010200</a>
 				</td></tr>
 				<tr><td>
-					<i>Drone-based Public Surveillance using 3D Point Clouds and Neuro-Fuzzy Classifier.</i> Abbas, Y., Alarfaj, A. A., Alabdulqader, E. A., Algarni, A., Jalal, A., Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press.<br>
+					<i>Drone-based Public Surveillance using 3D Point Clouds and Neuro-Fuzzy Classifier.</i> Abbas, Y., Alarfaj, A. A., Alabdulqader, E. A., Algarni, A., Jalal, A., Liu, H.* (2025). Computer, Materials & Continua, 82(3):4759-4776. Tech Science Press.<br>
 					<a href="https://scholar.google.com/scholar?q=Drone-based+Public+Surveillance+using+3D+Point+Clouds+and+Neuro-Fuzzy+Classifier" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Drone-Based-Public-Surveillance-Using-3D-Point-and-Abbas-Alarfaj/ed518104b3fc77f3b26fe09e17c8168da988c416" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/389182487_Drone-Based_Public_Surveillance_Using_3D_Point_Clouds_and_Neuro-Fuzzy_Classifier" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -335,7 +336,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmc.2025.059224" target="_blank" rel="noopener noreferrer">10.32604/cmc.2025.059224</a>
 				</td></tr>
 				<tr><td>
-					<i>An Integrated Artificial Intelligence-Driven Approach to Multi-Criteria Optimization of Building Energy Efficiency and Occupants' Comfort: A Case Study.</i> Liu, H., Du, Z., Xue, T., and Jiang, T.* (2025). Journal of Building Engineering. Elsevier.<br>
+					<i>An Integrated Artificial Intelligence-Driven Approach to Multi-Criteria Optimization of Building Energy Efficiency and Occupants' Comfort: A Case Study.</i> Liu, H., Du, Z., Xue, T., and Jiang, T.* (2025). Journal of Building Engineering, 103:111944. Elsevier.<br>
 					<a href="https://scholar.google.com/scholar?q=An+Integrated+Artificial+Intelligence-Driven+Approach+to+Multi-Criteria+Optimization+of+Building+Energy+Efficiency+and+Occupants%27+Comfort%3A+A+Case+Study" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/An-integrated-artificial-intelligence-driven-to-of-Liu-Du/69b8567a80b5853b541dc1902db05782fac2209f" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/388745151_An_integrated_artificial_intelligence-driven_approach_to_multi-criteria_optimization_of_building_energy_efficiency_and_occupants'_comfort_A_case_study" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -352,7 +353,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3526888" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3526888</a>
 				</td></tr>
 				<tr><td>
-					<i>Evaluating the Potential of Microdroplet Flow in Two-Phase Biocatalysis: A Systematic Study.</i> Xiang, L., Solarczek, J., Krajka, V., Liu, H., Ahlborn, L., Schallmey, A., and Constantinou, I.* (2025). ACS Applied Materials & Interfaces, 17(3). ACS Publications.<br>
+					<i>Evaluating the Potential of Microdroplet Flow in Two-Phase Biocatalysis: A Systematic Study.</i> Xiang, L., Solarczek, J., Krajka, V., Liu, H., Ahlborn, L., Schallmey, A., and Constantinou, I.* (2025). ACS Applied Materials & Interfaces, 17(3):4776–4787. ACS Publications.<br>
 					<a href="https://scholar.google.com/scholar?q=Evaluating+the+Potential+of+Microdroplet+Flow+in+Two-Phase+Biocatalysis%3A+A+Systematic+Study" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Evaluating-the-Potential-of-Microdroplet-Flow-in-A-Xiang-Solarczek/9f833e3e56a489fdfe312eb4fc36c05961cb59d8" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href=https://www.researchgate.net/publication/387894091_Evaluating_the_Potential_of_Microdroplet_Flow_in_Two-Phase_Biocatalysis_A_Systematic_Study" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -376,7 +377,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s25020441" target="_blank" rel="noopener noreferrer">10.3390/s25020441</a>
 				</td></tr>
 				<tr><td>
-					<i>Human Pose Estimation and Event Recognition via Feature Extraction and Neuro-Fuzzy Classifier.</i> Hanzla1, M., Alshammari, N. S., Alharbi, S. S., Wahid, W., Almujally, N. A., Jalal, A.*, Liu, H.* (2025). IEEE Access, 13:37328-37343.<br>
+					<i>Human Pose Estimation and Event Recognition via Feature Extraction and Neuro-Fuzzy Classifier.</i> Hanzla, M., Alshammari, N. S., Alharbi, S. S., Wahid, W., Almujally, N. A., Jalal, A.*, Liu, H.* (2025). IEEE Access, 13:37328-37343.<br>
 					<a href="https://scholar.google.com/scholar?q=Human+Pose+Estimation+and+Event+Recognition+via+Feature+Extraction+and+Neuro-Fuzzy+Classifier" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Human-Pose-Estimation-and-Event-Recognition-via-and-Hanzla-Alshammari/37c8b39cbe842726388b934b55f9eea8e6745e62" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/388699517_Human_Pose_Estimation_and_Event_Recognition_via_Feature_Extraction_and_Neuro-Fuzzy_Classifier" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
