--- a/publications.html
+++ b/publications.html
@@ -216,12 +216,9 @@
 	</td></tr>
 	<tr><td>
 		<i>Advanced Biosignal-RGB Fusion with Adaptive Neurofuzzy Classification for High-Precision Action Recognition.</i> Abro, I. A., Alhasson, H. F., Alharbi, S. S., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
-		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		-->
-		<a href="https://www.researchgate.net/publication/390087724_Advanced_Biosignal-RGB_Fusion_with_Adaptive_Neurofuzzy_Classification_for_High-Precision_Action_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=Advanced+Biosignal-RGB+Fusion+with+Adaptive+Neurofuzzy+Classification+for+High-Precision+Action+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Advanced-Biosignal-RGB-Fusion-with-Adaptive-for-Abro-Alhasson/09fd858fbd11943b768d983aac0c2e4bcf24e38a" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390087724_Advanced_Biosignal-RGB_Fusion_with_Adaptive_Neurofuzzy_Classification_for_High-Precision_Action_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10935610" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3553196" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3553196</a>
 	</td></tr>
