--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/356683096_Biosignal_Processing_and_Activity_Modeling_for_Multimodal_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://theses.eurasip.org/theses/911/biosignal-processing-and-activity-modeling-for/" target="_blank" rel="noopener noreferrer"><img src="images/Eurasip.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://media.suub.uni-bremen.de/handle/elib/5492" target="_blank" rel="noopener noreferrer"><img src="images/SuUB.png" height="15"></a>
-]		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.26092/elib/1219" target="_blank" rel="noopener noreferrer">10.26092/elib/1219</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.26092/elib/1219" target="_blank" rel="noopener noreferrer">10.26092/elib/1219</a>
 	</td></tr>
 
 	<tr><td>
@@ -148,7 +148,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://scholar.google.com/scholar?q=Muscle+Synergies+in+Joystick+Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Muscle-synergies-in-joystick-manipulation-Cai-Yan/b8f4cacd594fed0ec79a4f7b966d22673e864719" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675206_Muscle_synergies_in_joystick_manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fphys.2023.1282295/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fphys.2023.1282295" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2023.1282295" target="_blank" rel="noopener noreferrer">10.3389/fphys.2023.1282295</a>
 	</td></tr>
 	<tr><td>
@@ -157,7 +157,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://scholar.google.com/scholar?q=Outlier+Detection+Using+Iterative+Adaptive+Mini-Minimum+Spanning+Tree+Generation+with+Applications+on+Medical+Data" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Outlier-detection-using-iterative-adaptive-spanning-Li-Li/fb0fc149b382ef5ce415b44b35ab7352a0eb4b46" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675183_Outlier_detection_using_iterative_adaptive_mini-minimum_spanning_tree_generation_with_applications_on_medical_data" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fphys.2023.1233341/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fphys.2023.1233341" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2023.1233341" target="_blank" rel="noopener noreferrer">10.3389/fphys.2023.1233341</a>
 	</td></tr>
 	<tr><td>
@@ -166,7 +166,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://scholar.google.de/scholar?q=Robust+Human+Locomotion+and+Localization+Activity+Recognition+over+Multisensory" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Robust-human-locomotion-and-localization-activity-Khan-Alonazi/bb90b2c6698b935dcc789faab546118be8717927" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378393968_Robust_human_locomotion_and_localization_activity_recognition_over_multisensory" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/physiology/articles/10.3389/fphys.2024.1344887/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/physiology/articles/10.3389/fphys.2024.1344887" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2024.1344887" target="_blank" rel="noopener noreferrer">10.3389/fphys.2024.1344887</a>
 	</td></tr>
 	<tr><td>
@@ -193,21 +193,20 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://scholar.google.com/scholar?q=Remote+intelligent+perception+system+for+multi-object+detection" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Remote-intelligent-perception-system-for-detection-Alazeb-Chughtai/ac27d489678a64b99940afba827eaab3278711fd" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380720805_Remote_intelligent_perception_system_for_multi-object_detection" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fnbot.2024.1398703/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Unmanned Aerial Vehicle based Multi-Person Detection via Deep Neural Network Models.</i> Alshehri, M., Zahoor, L., Alqahtani, Y., Alshahrani, A., Al-Hammadi, D. A.,Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics <br>
-		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=Unmanned+Aerial+Vehicle+based+Multi-Person+Detection+via+Deep+Neural+Network+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1582995</a>
 	</td></tr>
-	-->
 	<tr><td>
-		<i>Advanced Biosignal-RGB Fusion with Adaptive Neurofuzzy Classification for High-Precision Action Recognition.</i> Abro, I. A., Alhasson, H. F., Alharbi, S. S., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+		<i>Advanced Biosignal-RGB Fusion with Adaptive Neurofuzzy Classification for High-Precision Action Recognition.</i> Abro, I. A., Alhasson, H. F., Alharbi, S. S., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, and Liu, H.* (2025). IEEE Access, 13:57287-57310.<br>
 		<a href="https://scholar.google.com/scholar?q=Advanced+Biosignal-RGB+Fusion+with+Adaptive+Neurofuzzy+Classification+for+High-Precision+Action+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Advanced-Biosignal-RGB-Fusion-with-Adaptive-for-Abro-Alhasson/09fd858fbd11943b768d983aac0c2e4bcf24e38a" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390087724_Advanced_Biosignal-RGB_Fusion_with_Adaptive_Neurofuzzy_Classification_for_High-Precision_Action_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -334,7 +333,7 @@
 		<a href="https://scholar.google.com/scholar?q=A+Robust+Multimodal+Detection%3A+Physical+Exercise+Monitoring+in+Long-Term+Care+Environments" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-robust-multimodal-detection-system%3A-physical-in-Mudawi-Batool/6cc77f006d73ee532d47447e5dfceff91555e57d" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/382973776_A_robust_multimodal_detection_system_Physical_exercise_monitoring_in_long-term_care_environments" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2024.1398291/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2024.1398291" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2024.1398291" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2024.1398291</a>
 	</td></tr>
 	<tr><td>
@@ -350,7 +349,7 @@
 		<a href="https://scholar.google.com/scholar?q=Innovative+healthcare+solutions%3A+robust+hand+gesture+recognition+of+daily+life+routines+using+1D+CNN" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Innovative-healthcare-solutions%3A-robust-hand-of-1D-Mudawi-Ansar/6ea62f04e69a0ceb72a0a6bce57fa8f321f476e3" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/382741631_Innovative_healthcare_solutions_robust_hand_gesture_recognition_of_daily_life_routines_using_1D_CNN" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2024.1401803/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2024.1401803" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2024.1401803" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2024.1401803</a>
 	</td></tr>
 	<tr><td>
@@ -358,7 +357,7 @@
 		<a href="https://scholar.google.com/scholar?q=Multi-modal+remote+perception+learning+for+object+sensory+data" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Multi-modal-remote-perception-learning-for-object-Almujally-Rafique/1b8febbf47bf63a16aa2625dd731461471df6ff1" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>		
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/384147762_Multi-modal_remote_perception_learning_for_object_sensory_data" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2024.1427786/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2024.1427786" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1427786" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1427786</a>
 	<tr><td>
 		<i>Enhanced Data Mining and Visualization of Sensory-Graph-Modeled Datasets through Summarization.</i> Hashmi, S. J., Alabdullah, B., Al Mudawi, N., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Sensors, 24(14):4554.<br>
@@ -428,7 +427,7 @@
 		<a href="https://scholar.google.com/scholar?q=CSL-SHARE%3A+A+Multimodal+Wearable+Sensor-Based+Human+Activity+Datasets" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/CSL-SHARE%3A-A-Multimodal-Wearable-Sensor-Based-Human-Liu-Hartmann/17dbf3ac9e44c44f45589feffbf447afc0349068" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/355231971_CSL-SHARE_A_Multimodal_Wearable_Sensor-Based_Human_Activity_Dataset" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fcomp.2021.759136/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fcomp.2021.759136" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer"><img src="images/Dataset.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fcomp.2021.759136" target="_blank" rel="noopener noreferrer">10.3389/fcomp.2021.759136</a>
 	</td></tr>
