--- a/researchcn.html
+++ b/researchcn.html
@@ -825,7 +825,8 @@
 					<td>
 						&#9679; <a href="https://healthinf.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF22.png" height="12"></a> - 15<sup>th</sup> International Conference on Health Informatics, Vienna, Austria<br>
 						&#9679; <a href="https://sigmap.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/SIGMAP22.png" height="12"></a> - 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br>
-						&#9679; <a href="https://biostec.scitevents.org//?y=2023" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2023.png" height="12"></a> - 16<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Lisbon, Portugal
+						&#9679; <a href="https://biostec0.scitevents.org//?y=2023" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2023.png" height="12"></a> - 16<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Lisbon, Portugal<br>
+						&#9679; <a href="https://healthinf.scitevents.org/?y=2025" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF25.png" height="12"></a> - 18<sup>th</sup> International Conference on Health Informatics, Porto, Portugal
 					</td>
 				</tr>
 				<tr>
