--- a/publications.html
+++ b/publications.html
@@ -62,8 +62,8 @@
 	</td></tr>
 
 	<tr><td>
-		<img src="images/Chapter.png" height="15">&nbsp;&nbsp;|&nbsp;&nbsp;<img src="images/Editorial.png" height="15">&nbsp;&nbsp;
-		<img src="images/5.png" height="15">
+		<img src="images/Chapter.png" height="15">&nbsp;&nbsp;
+		<img src="images/3.png" height="15">
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
@@ -86,15 +86,6 @@
 	</td></tr>
 	-->
 	<tr><td>
-		<i>Human Activity Recognition, Monitoring, and Analysis Facilitated by Novel and Widespread Applications of Sensors.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2024). Sensors, 24(15):5250.<br>
-		<a href="https://scholar.google.com/scholar?q=Human+Activity+Recognition%2C+Monitoring%2C+and+Analysis+Facilitated+by+Novel+and+Widespread+Applications+of+Sensors" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Human-Activity-Recognition%2C-Monitoring%2C-and-by-and-Liu-Gamboa/0b502fb4f7a4af87b9626e147c8fffe99c97eebf" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/383117809_Human_Activity_Recognition_Monitoring_and_Analysis_Facilitated_by_Novel_and_Widespread_Applications_of_Sensors" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/24/16/5250" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24165250" target="_blank" rel="noopener noreferrer">10.3390/s24165250</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/books/book/10390" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
-	</td></tr>
-	<tr><td>
 		<i>High-Level Features for Human Activity Recognition and Modeling.</i> Hartmann, Y.*, Liu, H., and Schultz, T. (2023). Biomedical Engineering Systems and Technologies. Springer Nature Switzerland.<br>
 		<a href="https://scholar.google.com/scholar?q=High-Level+Features+for+Human+Activity+Recognition+and+Modeling" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -104,22 +95,13 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-38854-5_8" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-38854-5_8</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-642-18472-7" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
 	</td></tr>
-	<tr><td>
-		<i>Sensor-Based Human Activity and Behavior Research: Where Advanced Sensing and Recognition Technologies Meet.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2023). Sensors, 23(1):125.<br>
-		<a href="https://scholar.google.com/scholar?q=sensor-based+human+activity+and+behavior+research" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Sensor-Based-Human-Activity-and-Behavior-Research%3A-Liu-Gamboa/d775d7f0105130e9f47ef95fd73d46243e385848" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/366563962_Sensor-Based_Human_Activity_and_Behavior_Research_Where_Advanced_Sensing_and_Recognition_Technologies_Meet" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/23/1/125" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s23010125" target="_blank" rel="noopener noreferrer">10.3390/s23010125</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/books/book/7447" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
-	</td></tr>
 
 	<tr><td>
 	</td></tr>
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/3.png" height="15"><img src="images/7.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/4.png" height="15"><img src="images/0.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -198,7 +180,18 @@
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Unmanned Aerial Vehicle based Multi-Person Detection via Deep Neural Network Models.</i> Alshehri, M., Zahoor, L., Alqahtani, Y., Alshahrani, A., Al-Hammadi, D. A.,Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics <br>
+		<i>Attention-Driven Emotion Recognition in EEG: A Transformer-Based Approach with Cross-Dataset Fine-Tuning.</i> Ghous, G., Najam, S., Alshehri, M., Alshahrani, A., AlQahtani, Y., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+		<!--
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1582995</a>
+		-->
+	</td></tr>
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Unmanned Aerial Vehicle based Multi-Person Detection via Deep Neural Network Models.</i> Alshehri, M., Zahoor, L., Alqahtani, Y., Alshahrani, A., Al-Hammadi, D. A.,Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics.<br>
 		<a href="https://scholar.google.com/scholar?q=Unmanned+Aerial+Vehicle+based+Multi-Person+Detection+via+Deep+Neural+Network+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -353,6 +346,15 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2024.1401803" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2024.1401803</a>
 	</td></tr>
 	<tr><td>
+		<i>Human Activity Recognition, Monitoring, and Analysis Facilitated by Novel and Widespread Applications of Sensors.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2024). Sensors, 24(15):5250.<br>
+		<a href="https://scholar.google.com/scholar?q=Human+Activity+Recognition%2C+Monitoring%2C+and+Analysis+Facilitated+by+Novel+and+Widespread+Applications+of+Sensors" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Human-Activity-Recognition%2C-Monitoring%2C-and-by-and-Liu-Gamboa/0b502fb4f7a4af87b9626e147c8fffe99c97eebf" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/383117809_Human_Activity_Recognition_Monitoring_and_Analysis_Facilitated_by_Novel_and_Widespread_Applications_of_Sensors" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/24/16/5250" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24165250" target="_blank" rel="noopener noreferrer">10.3390/s24165250</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/books/book/10390" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
+	</td></tr>
+	<tr><td>
 		<i>Multi-Modal Remote Perception Learning for Object Sensory Data.</i> Almujally, N. A., Rafique, A. A., Mudawi, N. A., Alazeb, A., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Neurorobotics, 18:1427786.<br>
 		<a href="https://scholar.google.com/scholar?q=Multi-modal+remote+perception+learning+for+object+sensory+data" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Multi-modal-remote-perception-learning-for-object-Almujally-Rafique/1b8febbf47bf63a16aa2625dd731461471df6ff1" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>		
@@ -390,6 +392,15 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/370529977_Hybrid_Modeling_on_Reconstitution_of_Continuous_Arterial_Blood_Pressure_Using_Finger_Photoplethysmography" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1746809423004056" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.bspc.2023.104972" target="_blank" rel="noopener noreferrer">10.1016/j.bspc.2023.104972</a>
+	</td></tr>
+	<tr><td>
+		<i>Sensor-Based Human Activity and Behavior Research: Where Advanced Sensing and Recognition Technologies Meet.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2023). Sensors, 23(1):125.<br>
+		<a href="https://scholar.google.com/scholar?q=sensor-based+human+activity+and+behavior+research" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Sensor-Based-Human-Activity-and-Behavior-Research%3A-Liu-Gamboa/d775d7f0105130e9f47ef95fd73d46243e385848" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/366563962_Sensor-Based_Human_Activity_and_Behavior_Research_Where_Advanced_Sensing_and_Recognition_Technologies_Meet" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/23/1/125" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s23010125" target="_blank" rel="noopener noreferrer">10.3390/s23010125</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/books/book/7447" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
 	</td></tr>
 	<tr><td>
 		<i>Feature-Based Information Retrieval of Multimodal Biosignals with a Self-Similarity Matrix: Focus on Automatic Segmentation.</i> Rodrigues, J.*., Liu, H.* (co-first), Folgado, D., Belo, D., Schultz, T., and Gamboa, H.* (2022). Biosensors, 12(12):1182. MDPI.<br>
