--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,7 @@
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/4.png" height="15"><img src="images/0.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/4.png" height="15"><img src="images/1.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -177,6 +177,17 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380720805_Remote_intelligent_perception_system_for_multi-object_detection" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
+	</td></tr>
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Wearable Sensors-based Assistive Technologies for Patient Health Monitoring.</i> NAlmujally, N. A., Khan, D., Al Mudawi, N., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
+		<!--
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1582995</a>
+		-->
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
