--- a/enkas/し.html
+++ b/enkas/し.html
@@ -257,7 +257,7 @@ Secret of my heart…<br>
 <br><hr><br><h1>
 <a id="島のブルース">【島のブルース】</a>G1-C3<br>
 <br>
-1 <ruby><rb>奄美</rb><rt>あまみ</rt></ruby>なちかしや　<ruby><rb>蘇鉄</rb><rt>ソテツ</rt></ruby>のかげで<br>
+1 <ruby><rb>奄美</rb><rt>あまみ</rt></ruby>なちかしゃ　<ruby><rb>蘇鉄</rb><rt>ソテツ</rt></ruby>のかげで<br>
 泣けばゆれます　サネン<ruby><rb>花</rb><rt>ばな</rt></ruby>ョ<br>
 長い黒髪　島娘　島娘ョ<br>
 <br>
