--- a/enkas/す.html
+++ b/enkas/す.html
@@ -158,7 +158,7 @@
 1 でもね　あの人　悪くないのよ<br>
 <ruby><rb>噂</rb><rt>うわさ</rt></ruby>　信じた　私が悪い<br>
 そうよ　一人に　なるの怖くて<br>
-尽くしすぎて捧ささげすぎて　捨てられたの<br>
+尽くしすぎて<ruby><rb>捧</rb><rt>ささ</rt></ruby>げすぎて　捨てられたの<br>
 <br>
 どんな愛でもいい　すがれるものなら<br>
 どんな愛でもいい　やり直せるなら<br>
@@ -174,7 +174,7 @@
 どんな愛でもいい　冷たくされても<br>
 どんな愛でもいい　そばにいられたら<br>
 <br>
-でもね大事な鍵かぎも　鍵も返したの<br>
+でもね大事な<ruby><rb>鍵</rb><rt>かぎ</rt></ruby>も　鍵も返したの<br>
 だから　だから今夜は　つき合ってよ<br>
 <br>
 3 どんな愛でもいい　すがれるものなら<br>
