--- a/indexcn.html
+++ b/indexcn.html
@@ -40,11 +40,11 @@
 			<td>
 				<br>
 				<br>
-				<font color="#FFFF00">
+				<font color="#FFFFFF">
 					<font size="7">刘&nbsp;&nbsp;辉</font>
 					<font size="5">&nbsp;工程学博士</font>
 					<br>
-					<font size="4">Dr.-Ing.&nbsp;</font>
+					<font size="4"><a href="indexenka.html">Dr.-Ing.</a>&nbsp;</font>
 					<font size="7">Hui LIU</font>
 				</font>
 			</td>
@@ -60,8 +60,8 @@
 		
 		<br><br><br><br><br>
 		
-		<p align="center"><font size="4" color="#A9FCE3">最后更新：12/2023</font></p>
-		<p align="right"><font size="1" color="#000000"><a href="indexenka.html"><img src="images/Patch.png" height="20"></font></p>
+		<p align="center"><font size="4" color="#A9FCE3">最后更新:04/2025</font></p>
+		<p align="right"><font size="1" color="#000000"><img src="images/Patch.png" height="20"></font></p>
 		<br>
 	</body>
 </html>
