--- a/indexenka.html
+++ b/indexenka.html
@@ -48,7 +48,7 @@
 		<a href="enkas/ら.html">ら</a> 
 		<a href="enkas/り.html">り</a> 
 		<a href="enkas/る.html">る</a> 
-		れ
+		<a href="enkas/れ.html">れ</a> 
 		ろ<br>
 		<a href="enkas/한국어.html">한국어</a><br>
 		<a href="enkas/việt.html">Tiếng Việt</a><br>
