--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,7 @@
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/4.png" height="15"><img src="images/1.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/4.png" height="15"><img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -180,7 +180,17 @@
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Wearable Sensors-based Assistive Technologies for Patient Health Monitoring.</i> NAlmujally, N. A., Khan, D., Al Mudawi, N., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
+		<i>Multi-Modal Remote Sensory Learning for Multi-Objects over Autonomous Devices.</i> Naseer, A., Almudawi, N., Aljuaid, H., Alazeb, A., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+	</td></tr>
+	-->
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Wearable Sensors-based Assistive Technologies for Patient Health Monitoring.</i> Almujally, N. A., Khan, D., Al Mudawi, N., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -195,10 +205,11 @@
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1582995</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;
 		-->
+		<a href="https://www.researchgate.net/publication/390825580_Attention-Driven_Emotion_Recognition_in_EEG_A_Transformer-Based_Approach_with_Cross-Dataset_Fine-Tuning" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10965678" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3561137" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3561137</a>
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
