--- a/researchcn.html
+++ b/researchcn.html
@@ -298,11 +298,12 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3561137" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3561137</a>
 				</td></tr>
 				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Unmanned Aerial Vehicle based Multi-Person Detection via Deep Neural Network Models.</i> Alshehri, M., Zahoor, L., Alqahtani, Y., Alshahrani, A., Al-Hammadi, D. A.,Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics.<br>
 					<a href="https://scholar.google.com/scholar?q=Unmanned+Aerial+Vehicle+based+Multi-Person+Detection+via+Deep+Neural+Network+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<!--
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390853268_Unmanned_aerial_vehicle_based_multi-person_detection_via_deep_neural_network_models" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1582995</a>
 				</td></tr>
